# opencv_cookbook

./: README.md  hough_lines.py
background_subtraction/: bg_subtraction.py
calibration/: calibration.py  epipolar_lines.py
color_segmentation/: hsv_segmentation.py  lab_segmentation.py  rgb_segmentation.py
contour_detection/: contour_detection.py
cpp/: .gitignore
cpp/face_detection/: CMakeLists.txt  FaceDetection.cpp  landmark.cpp
cpp/panorama/: CMakeLists.txt  (+1 more)
cpp/qr/: CMakeLists.txt  qr.cpp
custom_descriptor/: patch_matching.py
face_detection/: .gitignore  face_detection.py  face_recognition.py  landmark.py
from_scratch/: COR.py  hough_line.py  project_points.py  ransac_circle.py  ransac_circle_slow.py  ransac_line.py  ransac_line_old.py  regression_line_closed_form.py  rodrigues.py  watershed.py  wip_hough_line.py
gui/: dashed_line.py  draw_arrow.py  paint.py  poly_selection.py  select_roi.py
histogram/: histogram.py
hough_transform/: hough_circles.py  hough_lines.py
interactive/: crop.py  intelligent_scissors.py  intelligent_scissors_generate_video.py  move_gizmo.py
kmeans/: kmeans_dist_and_color.py  kmeans_exp_dist.py
kmeans.py/: kmeans.py  kmeans_quantization.py
morphological_operations/: skeltonization.py
npr/: pencil.py
optical_flow/: dense.py
other_libs/: sam_auto_segmentation.py  sam_demo.py
panorama/: panorma.py
pca/: pca.py
pyramid/: orapple.py  pyrup_pyrdown.py
qr/: qr.py
scratch/: harris.py  ransac_circle.py  ransac_circle_slow.py  ransac_line.py  ransac_line_fast.py
with_pytorch/: instance_segmentation.py
(+14 files in other folders)
