cmake_minimum_required(VERSION 2.8)
project( FaceDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( FaceDetection.o FaceDetection.cpp )
add_executable( landmark.o landmark.cpp )
target_link_libraries( FaceDetection.o ${OpenCV_LIBS} )
target_link_libraries( landmark.o ${OpenCV_LIBS} )
