cmake_minimum_required(VERSION 2.8)
project( qr )
# set(HAVE_QUIRC 1)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
# add_library(QUIRC STATIC quirc/src/decode.c)
# target_include_directories(QUIRC PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/quirc/include)
add_executable( qr.o qr.cpp )
# target_link_libraries(qr.o  PUBLIC QUIRC)
target_link_libraries(qr.o ${OpenCV_LIBS})
